--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="./reset.css">
 </head>
 <article class="parent">
-    <p class="color-red">hei</p>
-    <p class="color-blue">hei</p>
-    <p class="color-green">hei</p>
+    <p class="color-red"> Hei</p>
+    <p class="color-blue">Hei </p>
+    <p class="color-green">Hei </p>
 </article>
 <body>
     
